--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 version: '3'
 services:
+  nginx_service:
+    image: "nginx:stable"
   broker-rabbitmq:
     image: "rabbitmq:3.7.14-management"
     environment:
@@ -17,6 +19,7 @@ services:
     command: flask db upgrade
     depends_on:
       - db-postgres
+      - nginx_service
   api:
     build: .
     ports:
